Loading feature done

--- a/POS_Shop/Views/Controllers/SubCategory/SubCategoryForm.resx
+++ b/POS_Shop/Views/Controllers/SubCategory/SubCategoryForm.resx
@@ -148,10 +148,11 @@
   </data>
   <data name="SubcategoryIdTxt.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAFsAAAAfCAYAAACI/7HjAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAB6SURBVGhD7dCxCcQwAARB91+VhMr4MlyAjRLDF6CNZuGS
+        iVBORw0KGgoAAAANSUhEUgAAAFsAAAApCAYAAABa3FVTAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAACPSURBVGhD7dCxCcQwAARB91+VhMr4MlyAjRLDF6CNZuGS
         C+e61LbW+o0xHjuz7fth70Pn2r6wo2CHwQ6DHQY7DHYY7DDYYbDDYIfBDoMdBjsMdhjsMNhhsMNgh8EO
-        gx0GOwx2GOww2GGww2CH/WHPOe992Jlt3w9bTS/cTIJmd9k97QAAAABJRU5ErkJggg==
+        gx0GOwx2GOww2GGww2CHwQ6DHQY7DHYY7DDYYbDDYIfBDoMd9oc957z3YWe2fT9sNb3G106MdTy8ngAA
+        AABJRU5ErkJggg==
 </value>
   </data>
 </root>
