--- a/POS_Shop/MasterLayoutForm.resx
+++ b/POS_Shop/MasterLayoutForm.resx
@@ -630,6 +630,15 @@
         iGOKy+P7XgHMrB9+kw0DjkbVBVMAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="BillPadBtn.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAJEAAAArCAYAAAB4iWowAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAACiSURBVHhe7dKxDcIwAABB7xGFWRiPJhL7MQZ0KYKcEfzt
+        FSf9AD+21+/zeF8XrJj/jBljPGHJ/Y+JKExEZiIyE5GZiMxEZCYiMxGZichMRGYiMhORmYjMRGQmIjMR
+        mYnITERmIjITkZmIzERkJiIzEZmJyExEZiIyE5GZiMxEZCYiMxGZichMRGYiMhORmYjMRGQmIjMR2f3P
+        fpzfGbBi/vMHQGptDnVUjpkAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="LogoutBtn.ErrorImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
